--- a/Demo.html
+++ b/Demo.html
@@ -135,6 +135,52 @@
     .whatsapp-float:hover {
       transform: scale(1.1);
     }
+
+    /* Description Box Styling */
+    .description-box {
+      max-width: 800px;
+      margin: 40px auto 20px auto; /* Adjusted margin-top to separate from main content */
+      background-color: #ffffff;
+      border-radius: 12px;
+      padding: 30px 25px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+      border-left: 6px solid #e91e63;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+
+    .description-box h2 {
+      color: #e91e63;
+      font-size: 24px;
+      margin-bottom: 10px;
+    }
+
+    .description-box h3 {
+      color: #e91e63;
+      font-size: 20px;
+      margin-top: 20px;
+    }
+
+    .description-box p {
+      font-size: 16px;
+      line-height: 1.8;
+      margin-bottom: 15px;
+      color: #444;
+    }
+
+    .description-box ul {
+      padding-left: 20px;
+    }
+
+    .description-box ul li {
+      margin-bottom: 10px;
+      font-size: 16px;
+    }
+
+    @media (max-width: 600px) {
+      .description-box {
+        padding: 20px 15px;
+      }
+    }
   </style>
 
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
@@ -155,6 +201,29 @@
   <p style="margin-top:20px; text-align:center;">
     <strong>Total Users:</strong> <span id="userCount">0</span> |
     <strong>Total Orders:</strong> <span id="orderCount">0</span>
+  </p>
+</div>
+
+<div class="description-box">
+  <h2>Crunchyroll কি?</h2>
+  <p>
+    Crunchyroll হলো একটি জনপ্রিয় স্ট্রিমিং প্ল্যাটফর্ম যা মূলত জাপানি অ্যানিমে, ম্যানগা এবং কিছু এশিয়ান ড্রামা দেখার জন্য ব্যবহৃত হয়। এখানে আপনি হাজার হাজার অ্যানিমে সিরিজ, সিনেমা এবং কমিকস অনলাইনে দেখতে পারবেন। অনেক কনটেন্টে ইংরেজি সাবটাইটেলও থাকে, এবং কিছু কিছু ডাব করা ভার্সনও পাওয়া যায়। এটি অ্যানিমে প্রেমীদের জন্য একটি বিশ্বস্ত ও বৈধ মাধ্যম।
+  </p>
+
+  <h3>💎 Premium এ যা যা থাকছে:</h3>
+  <ul>
+    <li>🕐 <strong>সিমুলকাস্টস</strong>: জাপানে প্রচারের এক ঘণ্টার মধ্যে নতুন অ্যানিমে পর্ব দেখার সুবিধা।</li>
+    <li>🚫 <strong>বিজ্ঞাপনমুক্ত দেখা</strong>: অ্যানিমে দেখার সময় কোনো বিজ্ঞাপনের ব্যাঘাত থাকবে না।</li>
+    <li>📚 <strong>সম্পূর্ণ লাইব্রেরি অ্যাক্সেস</strong>: সকল অ্যানিমে ও মাঙ্গা শিরোনামে প্রবেশাধিকার।</li>
+    <li>📥 <strong>অফলাইন দেখা</strong>: ইন্টারনেট ছাড়াই পর্ব ডাউনলোড করার সুবিধা।</li>
+    <li>📱 <strong>মাল্টি-ডিভাইস স্ট্রিমিং</strong>: একাধিক ডিভাইসে একসাথে দেখা (প্ল্যানের উপর নির্ভর করে)।</li>
+    <li>🎮 <strong>Crunchyroll গেম ভল্ট</strong>: ফ্রি গেমসের একটি আলাদা ক্যাটালগে প্রবেশাধিকার।</li>
+    <li>🌟 <strong>নির্বাচিত কনটেন্ট</strong>: ব্যক্তিগত রেকমেন্ডেশন ও নির্বাচিত Crunchylists।</li>
+  </ul>
+
+  <h3>📦 Order কত দিনে পাবেন?</h3>
+  <p>
+    Crunchyroll Premium অর্ডার দেওয়ার পর আপনি সাধারণত <strong>১ থেকে ২ দিনের</strong> মধ্যেই অ্যাক্সেস পেয়ে যাবেন। অর্ডার দেওয়ার আগে অনুগ্রহ করে আপনার ইমেইল ঠিকানাটি ভালোভাবে যাচাই করে নিন, কারণ অ্যাকাউন্ট সংক্রান্ত তথ্য ও নির্দেশনা সরাসরি সেই ইমেইলেই পাঠানো হবে।
   </p>
 </div>
 
